--- a/semi.html
+++ b/semi.html
@@ -4,7 +4,12 @@
 	<p>SIMPIC Second Round Scoreboard<p>
 	
 	<link rel="stylesheet" href="./bootstrap.min.css">
-<script src="./bootstrap.min.js"></script>
+	<script src="./bootstrap.min.js"></script>
+	<script src="./odometer.min.js"></script>
+	<!-- <script src="http://github.hubspot.com/odometer/odometer.js"></script> -->
+	<link rel="stylesheet" href="./odometer-theme-minimal.css" />
+	<!-- <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-car.css" /> -->
+
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <style>
@@ -12,120 +17,49 @@
 			width: 0%;
 		}
 	</style>
+	<style>
+.odometer {
+    font-size: 100px;
+}
+</style>
 </head>
 <body>
 	<div class="container">
 			Round counter 
 			<span id="counter">0</span>  
 			<br>
-			<!--<span class="form-group">
-			<input type="text" id="team1"></span>
-			<span id="score1">0</span>  
-			<br>
-			<span class="form-group">
-			<input type="text" id="team2"></span>
-			<span id="score2">0</span> 
-			
-			<br>
-			<span class="form-group">
-			<input type="text" id="team3"></span>
-			<span id="score3">0</span>  
-			<br>
-			<span class="form-group">
-			<input type="text" id="team4"></span>
-			<span id="score4">0</span>  
-			<br>
-			<span class="form-group">
-			<input type="text" id="team5"></span>
-			<span id="score5">0</span>  
-			
-			<br>
-			<span class="form-group">
-			<input type="text" id="team6"></span>
-			<span id="score6">0</span>  
-			
-			<br>
-			<span class="form-group">
-			<input type="text" id="team7"></span>
-			<span id="score7">0</span>  
-			<br>
-			<button type="button" class="btn btn-dark" id="submit">Submit</button>
-			<button type="button" class="btn btn-dark" id="clear">Clear</button>
--->
-			
-		
 	</div>
 	<br>
-	<!--
-	<div class="container">
-		<div class="progress" style="height: 50px;">
-			 <div class="progress-bar" id="prog1" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
-		</div>
-	</div>
-	<br>
-	<div class="container">
-		<div class="progress" style="height: 50px;">
-			 <div class="progress-bar" id="prog2" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
-		</div>
-	</div>
-	<br>
-	<div class="container">
-		<div class="progress" style="height: 50px;">
-			 <div class="progress-bar" id="prog3" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
-		</div>
-	</div>
-	<br>
-	<div class="container">
-		<div class="progress" style="height: 50px;">
-			 <div class="progress-bar" id="prog4" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
-		</div>
-	</div>
-	<br>
-	<div class="container">
-		<div class="progress" style="height: 50px;">
-			 <div class="progress-bar" id="prog5" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
-		</div>
-	</div>
-	<br>
-	<div class="container">
-		<div class="progress" style="height: 50px;">
-			 <div class="progress-bar" id="prog6" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
-		</div>
-	</div>
-	<br>
-	<div class="container">
-		<div class="progress" style="height: 50px;">
-			 <div class="progress-bar" id="prog7" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
-		</div>
-	</div>-->
 	<div class="container">
 		<div class="row" style="height:900px;">
 			<div class="col-md" style="background: #f44242">
-				<p id="scoresec1" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p>
+				
+				<div id="scoresec1" class="odometer">0</div>
 			</div>
 			<div class="col-md" style="background: #92f442">
-				<p id="scoresec2" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p>
+				<!-- <p id="scoresec2" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p> -->
+				<div id="scoresec2" class="odometer">0</div>
 			</div>
 			<div class="col-md" style="background: #42aaf4">
-				<p id="scoresec3" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p>
+				<!-- <p id="scoresec3" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p> -->
+				<div id="scoresec3" class="odometer">0</div>
 			</div>
 			<div class="col-md" style="background: #bf42f4">
-				<p id="scoresec4" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p>
+				<!-- <p id="scoresec4" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p> -->
+				<div id="scoresec4" class="odometer">0</div>
 			</div>	
 			<div class="col-md" style="background: #f442ad">
-				<p id="scoresec5" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p>
+				<div id="scoresec5" class="odometer">0</div>
+				<!-- <p id="scoresec5" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p> -->
 			</div>
 		</div>
 	</div>
 	<script src="./socket.io.js"></script>
 	<script src="./jquery-3.2.1.min.js"></script>
 	<script >
-
-	/*	$(document).on('ready',function(){
-			$('.progress .progress-bar').css("width",function(){
-				return $(this).attr("aria-valuenow") + "%";
-			})
-		}) */
+		window.odometerOptions = {
+			animation: 'count'
+		};
 		(function(){
 			
 			var socket = io();
@@ -135,7 +69,7 @@
 				console.log('Connected');
 			};
 			socket.on('result',function(i,data){
-				console.log('working');
+				console.log('working '+data);
 				$('#scoresec'+i).text(data);
 			});
 			socket.on('cleared2',function(data){
