--- a/scoreboard-final.html
+++ b/scoreboard-final.html
@@ -65,7 +65,7 @@
 					percentage /=2;
 					percentage = 50-percentage;
 					console.log(percentage);
-					//$('#scorefin'+i).css('left',percentage+'%');
+					$('#scorefin'+i).css('left',percentage+'%');
 
 				}
 			});
