--- a/judge-fin.html
+++ b/judge-fin.html
@@ -30,7 +30,12 @@
 			<div class="col-md-6" id="team4">4</div>
 		</div>
 		<div>
-			<button type="button" class="btn" id="button2">Reset</button>
+			<div class="col-md">
+				<button type="button" class="btn" id="button2">Reset</button>
+			</div>
+			<div class="col-md-6" id="team5">
+				READY
+			</div>
 		</div>
 	</div>
  	<script src="./socket.io.js"></script>
