--- a/semi.html
+++ b/semi.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<p>SIMPIC Second Round Scoreboard<p>
-	
-	<link rel="stylesheet" href="./bootstrap.min.css">
+		<link rel="stylesheet" href="./bootstrap.min.css">
 	<script src="./bootstrap.min.js"></script>
 	<script src="./odometer.min.js"></script>
 	<!-- <script src="http://github.hubspot.com/odometer/odometer.js"></script> -->
 	<link rel="stylesheet" href="./odometer-theme-minimal.css" />
 	<!-- <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-car.css" /> -->
-
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <style>
@@ -24,17 +21,18 @@
 .span-1 {
 	position : absolute; bottom : 0;left:0;
 }
+.col-md {
+	padding: 0;
+	margin: 0;
+}
+.container1 {
+	padding-left: 15px;
+	padding-right: 15px;
+}
 </style>
 </head>
-<body>
-	<div class="container">
-			Round counter 
-			<span id="counter">0</span>  
-			<br>
-	</div>
-	<br>
-	<div class="container">
-		<div class="row" style="height:900px;">
+<body>	<div class="container1">
+		<div class="row" style="height: 100vh;">
 			<div class="col-md" style="background: #f44242">
 				<span class="span-1">
 					<div id="scoresec1" class="odometer">0</div>
