--- a/scoreboard.html
+++ b/scoreboard.html
@@ -56,53 +56,88 @@
 		
 	</div>
 	<br>
-	<div class="container">
-		<span id="score1">0</span> 
-		<div class="progress" style="height: 50px;">
+	<div class="row">
+		<div class="col-md-1 text-center">
+		<span id="score1">0</span>
+		<img src="./emblem-t66.png" style="width: 30px; "> </div>
+		<div class="col-md-11 text-center">
+		<div class="progress" style="height: 50px; ">
 			 <div class="progress-bar" id="prog1" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
 		</div>
 	</div>
+
+	</div>
 	<br>
-	<div class="container">
-		<span id="score2">0</span> 
-		<div class="progress" style="height: 50px;">
+	<div class="row">
+		<div class="col-md-1 text-center">
+		<span id="score2">0</span>
+		<img src="./emblem-t66.png" style="width: 30px; "> </div>
+		<div class="col-md-11 text-center">
+		<div class="progress" style="height: 50px; ">
 			 <div class="progress-bar" id="prog2" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
 		</div>
 	</div>
+
+	</div>
 	<br>
-	<div class="container">
-		<span id="score3">0</span> 
-		<div class="progress" style="height: 50px;">
+	<div class="row">
+		<div class="col-md-1 text-center">
+		<span id="score3">0</span>
+		<img src="./emblem-t66.png" style="width: 30px; "> </div>
+		<div class="col-md-11 text-center">
+		<div class="progress" style="height: 50px; ">
 			 <div class="progress-bar" id="prog3" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
 		</div>
 	</div>
+
+	</div>
 	<br>
-	<div class="container">
-		<span id="score4">0</span> 
-		<div class="progress" style="height: 50px;">
+	<div class="row">
+		<div class="col-md-1 text-center">
+		<span id="score4">0</span>
+		<img src="./emblem-t66.png" style="width: 30px; "> </div>
+		<div class="col-md-11 text-center">
+		<div class="progress" style="height: 50px; ">
 			 <div class="progress-bar" id="prog4" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
 		</div>
 	</div>
+
+	</div>
 	<br>
-	<div class="container">
-		<span id="score5">0</span> 
-		<div class="progress" style="height: 50px;">
+	<div class="row">
+		<div class="col-md-1 text-center">
+		<span id="score5">0</span>
+		<img src="./emblem-t66.png" style="width: 30px; "> </div>
+		<div class="col-md-11 text-center">
+		<div class="progress" style="height: 50px; ">
 			 <div class="progress-bar" id="prog5" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
 		</div>
 	</div>
+
+	</div>
 	<br>
-	<div class="container">
-		<span id="score6">0</span> 
-		<div class="progress" style="height: 50px;">
+	<div class="row">
+		<div class="col-md-1 text-center">
+		<span id="score6">0</span>
+		<img src="./emblem-t66.png" style="width: 30px; "> </div>
+		<div class="col-md-11 text-center">
+		<div class="progress" style="height: 50px; ">
 			 <div class="progress-bar" id="prog6" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
 		</div>
 	</div>
+
+	</div>
 	<br>
-	<div class="container">
-		<span id="score7">0</span> 
-		<div class="progress" style="height: 50px;">
+	<div class="row">
+		<div class="col-md-1 text-center">
+		<span id="score7">0</span>
+		<img src="./emblem-t66.png" style="width: 30px; "> </div>
+		<div class="col-md-11 text-center">
+		<div class="progress" style="height: 50px; ">
 			 <div class="progress-bar" id="prog7" role="progress-bar" aria-valuenow="0" aria-valuemin="0" arai-valuemax="100"></div>
 		</div>
+	</div>
+
 	</div>
 <!--
 	<div class="container">
@@ -164,7 +199,7 @@
 			};
 			socket.on('score',function(data){
 				console.log('working');
-				if(data[	0]!=0){
+				if(data[0]!=0){
 					for(var i=1;i<8;i++){
 						//var tmp = parseInt(score[i].innerText)+data[i];	
 						//score[i].innerText = tmp;
