--- a/semi.html
+++ b/semi.html
@@ -33,30 +33,35 @@
 </head>
 <body>	<div class="container1">
 		<div class="row" style="height: 100vh;">
-			<div class="col-md" style="background: #f44242">
+			<div class="col-md" style="background: rgba(128,0,0,0.5)">
+				<img src="./emblem-t66.png" style="width: 256px;">
 				<span class="span-1">
 					<div id="scoresec1" class="odometer">0</div>
 				</span>
 			</div>
-			<div class="col-md" style="background: #92f442">
+			<div class="col-md" style="background: rgba(0,128,0,0.7)">
+				<img src="./emblem-t68-e.png" style="width: 256px;">
 				<!-- <p id="scoresec2" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p> -->
 				<span class="span-1">
 					<div id="scoresec2" class="odometer">0</div>
 				</span>
 			</div>
-			<div class="col-md" style="background: #42aaf4">
+			<div class="col-md" style="background: rgba(128,0,128,0.7)">
+				<img src="./emblem-t93.png" style="width: 256px;">
 				<!-- <p id="scoresec3" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p> -->
 				<span class="span-1">
 					<div id="scoresec3" class="odometer">0</div>
 				</span>
 			</div>
-			<div class="col-md" style="background: #bf42f4">
+			<div class="col-md" style="background: rgba(128,128,0,0.7)">
+				<img src="./emblem-t66.png" style="width: 256px;">
 				<!-- <p id="scoresec4" style="font-size: 100pt; position : absolute; bottom : 0;left: 20%;">0</p> -->
 				<span class="span-1">
 					<div id="scoresec4" class="odometer">0</div>
 				</span>
 			</div>	
-			<div class="col-md" style="background: #f442ad">
+			<div class="col-md" style="background: rgba(50,40,120,0.7)">
+				<img src="./emblem-t68-e.png" style="width: 256px;">
 				<span class="span-1">
 					<div id="scoresec5" class="odometer">0</div>
 				</span>
