--- a/judge-fin.html
+++ b/judge-fin.html
@@ -44,7 +44,9 @@
 	<script >
 		(function(){
 			var socket=io();
-
+			var jsocket=io('192.168.1.141:8080/judge');
+			var send =[];
+			for(var i=0;i<6;i++) send[i]=0;
 			if(socket != undefined){
 				console.log("connected");
 			}
@@ -53,20 +55,49 @@
 					var i = $(this).attr('id').substr(4);
 					socket.emit('judgefin',i);
 					console.log(i);
+					if(i==5){
+						jsocket.emit('sendResultFinal',send);
+					}
 				})
 			});
-
 			socket.on('judgefin2',function(i,val){
-				if(val%3==1){
-					$('#team'+i).css('background','#00ff00');
+				if(i<8){
+					if(val%3==1){
+						$('#team'+i).css('background','#00ff00');
+						send[i]=1;
+					}
+					if(val%3==2){
+						$('#team'+i).css('background','#ff0000');
+						send[i]=2;
+					}
+					if(val%3==0){
+						$('#team'+i).css('background','#ffffff');
+						send[i]=0;
+					}
 				}
-				if(val%3==2){
-					$('#team'+i).css('background','#ff0000');
-				}
-				if(val%3==0){
-					$('#team'+i).css('background','#ffffff');
+				if(i==8){
+					if(val%2==1){
+						$('#team'+i).css('background','#00ff00');
+						send[i]=1;
+					}
+					if(val%2==0){
+						$('#team'+i).css('background','#ffffff');
+						send[i]=0;
+					}	
 				}
 			});
+
+			// socket.on('judgefin2',function(i,val){
+			// 	if(val%3==1){
+			// 		$('#team'+i).css('background','#00ff00');
+			// 	}
+			// 	if(val%3==2){
+			// 		$('#team'+i).css('background','#ff0000');
+			// 	}
+			// 	if(val%3==0){
+			// 		$('#team'+i).css('background','#ffffff');
+			// 	}
+			// });
 			$('#button2').click(function(){
 				socket.emit('judgefin',0);
 			});
