--- a/judge-sec.html
+++ b/judge-sec.html
@@ -17,6 +17,14 @@
     		border-style: solid;
     		font-size: 50px;
     	}
+
+    	.col-md-9{
+    		border-style: solid;
+    		font-size: 30px;
+    	}
+    	.row1{
+    		height: 50px;
+    	}
     </style>
 </head>
 <body>
@@ -34,11 +42,11 @@
 			<div class="col-md-6" id="team6">6</div>
 			<div class="col-md-6" id="team7">7</div>
 		</div>
-		<div>
-			<div class="col-md">
-				<button type="button" class="btn" id="button2">Reset</button>
+		<div class="row row1">
+			<div class="col-md-3">
+				<button type="button" class="btn btn-primary btn-large" id="button2">Reset</button>
 			</div>
-			<div class="col-md-6" id="team8">
+			<div class="col-md-9" id="team8">
 				READY
 			</div>
 		</div>
@@ -49,10 +57,10 @@
 	<script >
 		(function(){
 			var socket=io();
-			var jsocket=io('127.0.0.1:8080/score');
+			var jsocket=io('192.168.1.141:8080/judge');
 			var send=[];
 			for(var i=0;i<9;i++) send[i]=0;
-
+//
 			if(socket != undefined){
 				console.log("connected");
 			}
@@ -69,18 +77,31 @@
 			});
 
 			socket.on('judgesec2',function(i,val){
-				if(val%3==1){
-					$('#team'+i).css('background','#00ff00');
-					send[i]=1;
+				if(i<8){
+					if(val%3==1){
+						$('#team'+i).css('background','#00ff00');
+						send[i]=1;
+					}
+					if(val%3==2){
+						$('#team'+i).css('background','#ff0000');
+						send[i]=2;
+					}
+					if(val%3==0){
+						$('#team'+i).css('background','#ffffff');
+						send[i]=0;
+					}
 				}
-				if(val%3==2){
-					$('#team'+i).css('background','#ff0000');
-					send[i]=2;
+				if(i==8){
+					if(val%2==1){
+						$('#team'+i).css('background','#00ff00');
+						send[i]=1;
+					}
+					if(val%2==0){
+						$('#team'+i).css('background','#ffffff');
+						send[i]=0;
+					}	
 				}
-				if(val%3==0){
-					$('#team'+i).css('background','#ffffff');
-					send[i]=0;
-				}
+
 			});
 			$('#button2').click(function(){
 				socket.emit('judgesec',0);
