--- a/scoreboard-final2.html
+++ b/scoreboard-final2.html
@@ -3,11 +3,7 @@
 <head>
 	<link rel="stylesheet" href="./bootstrap.min.css">
 	<script src="./bootstrap.min.js"></script>
-	<script src="./odometer.min.js"></script>
 	<script src="./countUp.js"></script>
-	<!-- <script src="http://github.hubspot.com/odometer/odometer.js"></script> -->
-	<link rel="stylesheet" href="./odometer-theme-minimal.css" />
-	<!-- <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-car.css" /> -->
 
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,6 +14,7 @@
 	</style>
 	<style>
 .container1 {
+	margin: 0;
 	/*padding-left: 27px;*/
 	/*padding-right: 18px;*/
 }
@@ -62,11 +59,11 @@
 </head>
 <body>
 	<div class="container1">
-		<div class="row" style="height: 100vh;">
+		<div class="row" style="height: 100vh;padding-left:0;padding-right:0; margin-left:0; margin-right:0;">
 			<div class="col-md-3 col-shadow" style="background: rgb(230, 255, 196)">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<span class="teamName team1">PNU</span>
+						<span class="teamName team1">SIMPIC</span>
 					</div>
 				</div>
 				<div class="row">
@@ -82,16 +79,16 @@
 						<span class="scoreDec" id="scoreDec1">0</span>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<img src="./emblem-t68-e.png" style="width: 320px;">
+				<div class="row" style="padding-left:0;padding-right:0; margin-left:0; margin-right:0;">
+					<div class="col-md-12" style="padding-left:0;padding-right:0; margin-left:0; margin-right:0;">
+						<img src="./simpic_logo.png" style="width: 360px; padding:0; margin:0;">
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-shadow" style="background: rgb(170, 239, 233)">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<span class="teamName team2">CMU</span>
+						<span class="teamName team2">UNEJ</span>
 					</div>
 				</div>
 				<div class="row">
@@ -116,7 +113,7 @@
 			<div class="col-md-3 col-shadow" style="background: rgba(216, 170, 239, 0.6)">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<span class="teamName team3">SI</span>
+						<span class="teamName team3">CGU</span>
 					</div>
 				</div>
 				<div class="row">
@@ -141,7 +138,7 @@
 			<div class="col-md-3 col-shadow" style="background: rgb(255, 237, 196)">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<span class="teamName team4">CU</span>
+						<span class="teamName team4">KYAMC</span>
 					</div>
 				</div>
 				<div class="row">
