--- a/judge-fin.html
+++ b/judge-fin.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <style type="text/css">
     	.row {
-    		height : 300px;
+    		height : 200px;
     	}
     	.col-md-6{
     		border-style: solid;
@@ -17,20 +17,32 @@
     		border-style: solid;
     		font-size: 50px;
     	}
+    	.row1{
+    		height: 80px;
+    	}
     </style>
 </head>
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6" id="team1">1</div>
-			<div class="col-md-6" id="team2">2</div>
+			<div class="col-md-2"></div>
+			<div class="col-md-4" id="team1">1</div>
+			<div class="col-md-4" id="team2">2</div>
+			<div class="col-md-2"></div>
 		</div>
+		<br>
 		<div class="row">
-			<div class="col-md-6" id="team3">3</div>
-			<div class="col-md-6" id="team4">4</div>
+			<div class="col-md-1"></div>
+			<div class="col-md-4" id="team3">3</div>
+			<div class="col-md-2"></div>
+			<div class="col-md-4" id="team4">4</div>
+			<div class="col-md-1"></div>
 		</div>
-		<div>
+		<br>
+		<div class="row row1">
+			<br>
 			<div class="col-md">
+				<br>
 				<button type="button" class="btn" id="button2">Reset</button>
 			</div>
 			<div class="col-md-6" id="team5">
